--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -26,7 +27,46 @@
         <div class="content-wrapper">
             <div class="portfolio-items-wrappper">
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="backround-image:url()"></div>
+                    <div class="portfolio-img-background" style="backround-image:url(images/portfolio1.jpeg)"></div>
+                    <div class="img-text-wrapper">
+                        <div class="logo-wrapper">
+                            <img src="images/logos/quip.png" alt="">
+                        </div>
+                        <div class="subtitle">
+                            stevekibe example
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="portfolio-items-wrappper">
+                <div class="portfolio-item-wrapper">
+                    <div class="portfolio-img-background" style="backround-image:url(images/portfolio2.jpeg)"></div>
+                    <div class="img-text-wrapper">
+                        <div class="logo-wrapper">
+                            <img src="images/logos/devcamp.png." alt="">
+                        </div>
+                        <div class="subtitle">
+                            stevekibe example
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="portfolio-items-wrappper">
+                <div class="portfolio-item-wrapper">
+                    <div class="portfolio-img-background" style="backround-image:url(images/portfolio3.jpeg)"></div>
+                    <div class="img-text-wrapper">
+                        <div class="logo-wrapper">
+                            <img src="images/logos/eventbrite.png" alt="">
+                        </div>
+                        <div class="subtitle">
+                            stevekibe example
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="portfolio-items-wrappper">
+                <div class="portfolio-item-wrapper">
+                    <div class="portfolio-img-background" style="backround-image:url(images/portfolio4.jpeg)"></div>
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
                             <img src="">
@@ -39,7 +79,7 @@
             </div>
             <div class="portfolio-items-wrappper">
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="backround-image:url()"></div>
+                    <div class="portfolio-img-background" style="backround-image:url(images/portfolio5.jpeg)"></div>
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
                             <img src="">
@@ -52,7 +92,7 @@
             </div>
             <div class="portfolio-items-wrappper">
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="backround-image:url()"></div>
+                    <div class="portfolio-img-background" style="backround-image:url(images/portfolio6.jpeg)"></div>
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
                             <img src="">
@@ -65,7 +105,7 @@
             </div>
             <div class="portfolio-items-wrappper">
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="backround-image:url()"></div>
+                    <div class="portfolio-img-background" style="backround-image:url(images/portfolio7.jpeg)"></div>
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
                             <img src="">
@@ -78,7 +118,7 @@
             </div>
             <div class="portfolio-items-wrappper">
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="backround-image:url()"></div>
+                    <div class="portfolio-img-background" style="backround-image:url(images/portfolio8.jpeg)"></div>
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
                             <img src="">
@@ -91,46 +131,7 @@
             </div>
             <div class="portfolio-items-wrappper">
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="backround-image:url()"></div>
-                    <div class="img-text-wrapper">
-                        <div class="logo-wrapper">
-                            <img src="">
-                        </div>
-                        <div class="subtitle">
-                            stevekibe example
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="portfolio-items-wrappper">
-                <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="backround-image:url()"></div>
-                    <div class="img-text-wrapper">
-                        <div class="logo-wrapper">
-                            <img src="">
-                        </div>
-                        <div class="subtitle">
-                            stevekibe example
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="portfolio-items-wrappper">
-                <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="backround-image:url()"></div>
-                    <div class="img-text-wrapper">
-                        <div class="logo-wrapper">
-                            <img src="">
-                        </div>
-                        <div class="subtitle">
-                            stevekibe example
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="portfolio-items-wrappper">
-                <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="backround-image:url()"></div>
+                    <div class="portfolio-img-background" style="backround-image:url(images/portfolio9.jpeg)"></div>
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
                             <img src="">
@@ -142,7 +143,7 @@
                 </div>
             </div><div class="portfolio-items-wrappper">
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="backround-image:url()"></div>
+                    <div class="portfolio-img-background" style="backround-image:url(images/portfolio10.jpeg)"></div>
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
                             <img src="">
@@ -155,7 +156,7 @@
             </div>
             <div class="portfolio-items-wrappper">
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="backround-image:url()"></div>
+                    <div class="portfolio-img-background" style="backround-image:url(images/portfolio11.jpeg)"></div>
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
                             <img src="">
@@ -168,7 +169,7 @@
             </div>
             <div class="portfolio-items-wrappper">
                 <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="backround-image:url()"></div>
+                    <div class="portfolio-img-background" style="backround-image:url(images/portfolio12.jpeg)"></div>
                     <div class="img-text-wrapper">
                         <div class="logo-wrapper">
                             <img src="">
