--- a/index.html
+++ b/index.html
@@ -1,188 +1,190 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+  <meta charset='UTF-8'>
+  <title>Portfolio Homepage</title>
+  <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    <div class="container">
-        <div class="nav-wrapper">
-            <div class="left-side">
-                <div class="nav-link-wrapper">
-                    <a href="index.html">Home</a>
-                </div>
-                <div class="nav-link-wrapper">
-                    <a href="about.html">About</a>
-                </div>
-            </div>
-            <div class="right-side">
-                <div class="brand">
-                    <div>Stephen kibe</div>
-                </div>
-            </div>
+  <div class="container">
+    <div class="nav-wrapper">
+      <div class="left-side">
+        <div class="nav-link-wrapper active-nav-link">
+          <a href="index.html">Home</a>
         </div>
-        <div class="content-wrapper">
-            <div class="portfolio-items-wrappper">
-                <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="backround-image:url(images/portfolio1.jpeg)"></div>
-                    <div class="img-text-wrapper">
-                        <div class="logo-wrapper">
-                            <img src="images/logos/quip.png" alt="">
-                        </div>
-                        <div class="subtitle">
-                            stevekibe example
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="portfolio-items-wrappper">
-                <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="backround-image:url(images/portfolio2.jpeg)"></div>
-                    <div class="img-text-wrapper">
-                        <div class="logo-wrapper">
-                            <img src="images/logos/devcamp.png." alt="">
-                        </div>
-                        <div class="subtitle">
-                            stevekibe example
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="portfolio-items-wrappper">
-                <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="backround-image:url(images/portfolio3.jpeg)"></div>
-                    <div class="img-text-wrapper">
-                        <div class="logo-wrapper">
-                            <img src="images/logos/eventbrite.png" alt="">
-                        </div>
-                        <div class="subtitle">
-                            stevekibe example
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="portfolio-items-wrappper">
-                <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="backround-image:url(images/portfolio4.jpeg)"></div>
-                    <div class="img-text-wrapper">
-                        <div class="logo-wrapper">
-                            <img src="">
-                        </div>
-                        <div class="subtitle">
-                            stevekibe example
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="portfolio-items-wrappper">
-                <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="backround-image:url(images/portfolio5.jpeg)"></div>
-                    <div class="img-text-wrapper">
-                        <div class="logo-wrapper">
-                            <img src="">
-                        </div>
-                        <div class="subtitle">
-                            stevekibe example
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="portfolio-items-wrappper">
-                <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="backround-image:url(images/portfolio6.jpeg)"></div>
-                    <div class="img-text-wrapper">
-                        <div class="logo-wrapper">
-                            <img src="">
-                        </div>
-                        <div class="subtitle">
-                            stevekibe example
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="portfolio-items-wrappper">
-                <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="backround-image:url(images/portfolio7.jpeg)"></div>
-                    <div class="img-text-wrapper">
-                        <div class="logo-wrapper">
-                            <img src="">
-                        </div>
-                        <div class="subtitle">
-                            stevekibe example
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="portfolio-items-wrappper">
-                <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="backround-image:url(images/portfolio8.jpeg)"></div>
-                    <div class="img-text-wrapper">
-                        <div class="logo-wrapper">
-                            <img src="">
-                        </div>
-                        <div class="subtitle">
-                            stevekibe example
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="portfolio-items-wrappper">
-                <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="backround-image:url(images/portfolio9.jpeg)"></div>
-                    <div class="img-text-wrapper">
-                        <div class="logo-wrapper">
-                            <img src="">
-                        </div>
-                        <div class="subtitle">
-                            stevekibe example
-                        </div>
-                    </div>
-                </div>
-            </div><div class="portfolio-items-wrappper">
-                <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="backround-image:url(images/portfolio10.jpeg)"></div>
-                    <div class="img-text-wrapper">
-                        <div class="logo-wrapper">
-                            <img src="">
-                        </div>
-                        <div class="subtitle">
-                            stevekibe example
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="portfolio-items-wrappper">
-                <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="backround-image:url(images/portfolio11.jpeg)"></div>
-                    <div class="img-text-wrapper">
-                        <div class="logo-wrapper">
-                            <img src="">
-                        </div>
-                        <div class="subtitle">
-                            stevekibe example
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="portfolio-items-wrappper">
-                <div class="portfolio-item-wrapper">
-                    <div class="portfolio-img-background" style="backround-image:url(images/portfolio12.jpeg)"></div>
-                    <div class="img-text-wrapper">
-                        <div class="logo-wrapper">
-                            <img src="">
-                        </div>
-                        <div class="subtitle">
-                            stevekibe example
-                        </div>
-                    </div>
-                </div>
-            </div>
-            
+
+        <div class="nav-link-wrapper">
+          <a href="about.html">About</a>
         </div>
+      </div>
+
+      <div class="right-side">
+        <div class="brand">
+          STEPHEN KIBE
+        </div>
+      </div>
     </div>
-    
+
+    <div class="content-wrapper">
+      <div class="portfolio-items-wrapper">
+
+        <div class="portfolio-item-wrapper">
+          <div class="portfolio-img-background" style="background-image:url(images/portfolio1.jpeg)"></div>
+
+          <div class="img-text-wrapper">
+            <div class="logo-wrapper">
+              <img src="images/logos/quip.png" alt="">
+            </div>
+
+            <div class="subtitle">Steve Example</div>
+          </div>
+        </div>
+
+        <div class="portfolio-item-wrapper">
+          <div class="portfolio-img-background" style="background-image:url(images/portfolio2.jpeg)"></div>
+          <div class="img-text-wrapper">
+            <div class="logo-wrapper">
+              <img src="images/logos/devcamp.png" alt="">
+            </div>
+
+            <div class="subtitle">Steve Example</div>
+          </div>
+        </div>
+
+        <div class="portfolio-item-wrapper">
+          <div class="portfolio-img-background" style="background-image:url(images/portfolio3.jpeg)"></div>
+          <div class="img-text-wrapper">
+            <div class="logo-wrapper">
+              <img src="images/logos/eventbrite.png" alt="">
+            </div>
+
+            <div class="subtitle">Steve Example</div>
+          </div>
+        </div>
+
+        <div class="portfolio-item-wrapper">
+          <div class="portfolio-img-background" style="background-image:url(images/portfolio4.jpeg)"></div>
+          <div class="img-text-wrapper">
+            <div class="logo-wrapper">
+              <img src="images/logos/shop-hacker.png" alt="">
+            </div>
+
+            <div class="subtitle">Steve Example</div>
+          </div>
+        </div>
+
+        <div class="portfolio-item-wrapper">
+          <div class="portfolio-img-background" style="background-image:url(images/portfolio5.jpeg)"></div>
+          <div class="img-text-wrapper">
+            <div class="logo-wrapper">
+              <img src="images/logos/crondose.png" alt="">
+            </div>
+
+            <div class="subtitle">Steve Example</div>
+          </div>
+        </div>
+
+        <div class="portfolio-item-wrapper">
+          <div class="portfolio-img-background" style="background-image:url(images/portfolio6.jpeg)"></div>
+          <div class="img-text-wrapper">
+            <div class="logo-wrapper">
+              <img src="images/logos/dailysmarty.png" alt="">
+            </div>
+
+            <div class="subtitle">Steve Example</div>
+          </div>
+        </div>
+
+        <div class="portfolio-item-wrapper">
+          <div class="portfolio-img-background" style="background-image:url(images/portfolio7.jpeg)"></div>
+          <div class="img-text-wrapper">
+            <div class="logo-wrapper">
+              <img src="images/logos/dashtrack.png" alt="">
+            </div>
+
+            <div class="subtitle">Steve Example</div>
+          </div>
+        </div>
+
+        <div class="portfolio-item-wrapper">
+          <div class="portfolio-img-background" style="background-image:url(images/portfolio8.jpeg)"></div>
+          <div class="img-text-wrapper">
+            <div class="logo-wrapper">
+              <img src="images/logos/devtrunk.png" alt="">
+            </div>
+
+            <div class="subtitle">Steve Example</div>
+          </div>
+        </div>
+
+        <div class="portfolio-item-wrapper">
+          <div class="portfolio-img-background" style="background-image:url(images/portfolio9.jpeg)"></div>
+          <div class="img-text-wrapper">
+            <div class="logo-wrapper">
+              <img src="images/logos/edutechional.png" alt="">
+            </div>
+
+            <div class="subtitle">Steve Example</div>
+          </div>
+        </div>
+
+        <div class="portfolio-item-wrapper">
+          <div class="portfolio-img-background" style="background-image:url(images/portfolio10.jpeg)"></div>
+          <div class="img-text-wrapper">
+            <div class="logo-wrapper">
+              <img src="images/logos/ministry-safe.png" alt="">
+            </div>
+
+            <div class="subtitle">Steve Example</div>
+          </div>
+        </div>
+
+        <div class="portfolio-item-wrapper">
+          <div class="portfolio-img-background" style="background-image:url(images/portfolio11.jpeg)"></div>
+          <div class="img-text-wrapper">
+            <div class="logo-wrapper">
+              <img src="images/logos/open-devos.png" alt="">
+            </div>
+
+            <div class="subtitle">Steve Example</div>
+          </div>
+        </div>
+
+        <div class="portfolio-item-wrapper">
+          <div class="portfolio-img-background" style="background-image:url(images/portfolio12.jpeg)"></div>
+          <div class="img-text-wrapper">
+            <div class="logo-wrapper">
+              <img src="images/logos/toastability.png" alt="">
+            </div>
+
+            <div class="subtitle">Easy way to manage the digital life of your bar or restaurant.</div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+  </div>
+
 </body>
+
+<script>
+  const portfolioItems = document.querySelectorAll('.portfolio-item-wrapper');
+
+  portfolioItems.forEach(portfolioItem => {
+    portfolioItem.addEventListener('mouseover', () => {
+      console.log(portfolioItem.childNodes[1].classList)
+      portfolioItem.childNodes[1].classList.add('image-blur');
+    });
+
+    portfolioItem.addEventListener('mouseout', () => {
+      console.log(portfolioItem.childNodes[1].classList)
+      portfolioItem.childNodes[1].classList.remove('image-blur');
+    });
+  });
+
+</script>
+
 </html>
